Add Windows 11 support to CI with llvmenv

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,41 +44,45 @@ jobs:
       
       - name: Install LLVM 18.1 (Windows)
         if: ${{ matrix.os == 'windows-latest' }}
-        uses: KyleMayes/install-llvm-action@v2
-        with:
-          version: "18.1"
-          directory: ${{ runner.temp }}/llvm-18
-
-      - name: Configure LLVM environment (Windows)
-        if: ${{ matrix.os == 'windows-latest' }}
         shell: pwsh
         run: |
-          $llvmPath = $env:LLVM_PATH
+          $ErrorActionPreference = "Stop"
+
+          if (-not (Get-Command cargo -ErrorAction SilentlyContinue)) {
+            throw "cargo is required to install llvmenv"
+          }
+
+          Write-Host "Installing llvmenv"
+          cargo install llvmenv --locked
+
+          $llvmVersion = "18.1.8"
+          Write-Host "Building LLVM $llvmVersion via llvmenv"
+          llvmenv install $llvmVersion
+          llvmenv global $llvmVersion
+
+          $llvmPath = llvmenv prefix
           if (-not $llvmPath) {
-            throw "LLVM_PATH was not provided by KyleMayes/install-llvm-action"
+            throw "llvmenv prefix returned an empty path"
+          }
+
+          $llvmBin = Join-Path $llvmPath "bin"
+          $llvmConfig = Join-Path $llvmBin "llvm-config.exe"
+          if (-not (Test-Path $llvmConfig)) {
+            throw "llvm-config.exe was not found under $llvmPath. The llvm-sys crate requires it."
           }
 
           Write-Host "LLVM installed at: $llvmPath"
           "LLVM_SYS_181_PREFIX=$llvmPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          "LIBCLANG_PATH=$llvmPath\\bin" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+          "LIBCLANG_PATH=$llvmBin" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
           "LLVM_HOME=$llvmPath" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          $llvmConfig = Join-Path $llvmPath "bin/llvm-config.exe"
-          if (-not (Test-Path $llvmConfig)) {
-            throw "llvm-config.exe was not found under $llvmPath. The llvm-sys crate requires it."
-          }
           "LLVM_CONFIG_PATH=$llvmConfig" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-          "$llvmPath\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+          "$llvmBin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+
+          Write-Host "llvm-config version:"
+          & $llvmConfig --version
 
           Write-Host "Clang version:"
-          & "$llvmPath\bin\clang.exe" --version
-
-      - name: Verify LLVM install (Windows)
-        if: ${{ matrix.os == 'windows-latest' }}
-        shell: pwsh
-        run: |
-          Write-Host "LLVM_SYS_181_PREFIX=$env:LLVM_SYS_181_PREFIX"
-          Write-Host "LLVM_CONFIG_PATH=$env:LLVM_CONFIG_PATH"
-          & "$env:LLVM_CONFIG_PATH" --version
+          & (Join-Path $llvmBin "clang.exe") --version
       
       - name: Cache Cargo dependencies
         uses: actions/cache@v4
