--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ lexer.path = "crates/lexer"
 cache.path = "crates/cache"
 ffi.path = "crates/ffi"
 fmt.path = "crates/fmt"
+parser.path = "crates/parser"
 
 anyhow = "1.0"
 tempfile = "3.10"
